# PIL1_2324_2

./: .gitignore  Makefile  pyproject.toml  requirements.txt
PIL1_2324_2/: asgi.py  settings.py  urls.py
Youme/: admin.py  consumers.py  filters.py  forms.py  models.py  recommandations.py  routing.py  urls.py  views.py
Youme/management/commands/: import_hobbies.py  import_users.py
Youme/migrations/: 0033_alter_utilisateur_last_login.py
